compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__exhaustiveness__bit_array_bits_catches_everything.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
expression: "pub fn main() {\n  let bit_array = <<>>\n  case bit_array {\n    <<_:bits>> -> 1\n    <<1>> -> 2\n    _ -> 2\n  }\n}"
---
----- SOURCE CODE
pub fn main() {
  let bit_array = <<>>
  case bit_array {
    <<_:bits>> -> 1
    <<1>> -> 2
    _ -> 2
  }
}

----- WARNING
warning: Unreachable pattern
  ┌─ /src/warning/wrn.gleam:5:5
  │
5 │     <<1>> -> 2
  │     ^^^^^

This pattern cannot be reached as a previous pattern matches the same
values.

Hint: It can be safely removed.

warning: Unreachable pattern
  ┌─ /src/warning/wrn.gleam:6:5
  │
6 │     _ -> 2
  │     ^

This pattern cannot be reached as a previous pattern matches the same
values.

Hint: It can be safely removed.
