compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__exhaustiveness__custom_2.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
assertion_line: 801
expression: "\npub type Type {\n  One\n  Two\n  Three(Type)\n}\n\npub fn main(x) {\n  case x {\n    One -> 1\n    Two -> 2\n    Three(One) -> 4\n  }\n}\n"
---

warning: Inexhaustive Patterns
   ┌─ /src/warning/wrn.gleam:9:3
   │  
 9 │ ╭   case x {
10 │ │     One -> 1
11 │ │     Two -> 2
12 │ │     Three(One) -> 4
13 │ │   }
   │ ╰───^

This case expression does not have a pattern for all possible values.
If is run on one of the values without a pattern then it will crash.

The missing patterns are:

    Three(Three(_))
    Three(Two)

In a future version of Gleam this will become a compile error.


